--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -31,12 +31,14 @@ jobs:
           extended: true
 
       - name: Build
-        run: hugo --minify
+        run: |
+          cd Morteza-Mahdavi-Blog
+          hugo --minify
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./public
+          path: Morteza-Mahdavi-Blog/public
 
   deploy:
     environment:
