--- a/Morteza-Mahdavi-Blog/hugo.toml
+++ b/Morteza-Mahdavi-Blog/hugo.toml
@@ -10,6 +10,7 @@ title = "Morteza Mahdavi Blog"
 
 theme = "hugo-blog-awesome"
 
+author = { name = "Morteza Mahdavi", email = "mahdavi.morteza@outlook.com" }
 # Enable emojis globally
 enableEmoji = true
 ignoreErrors = ["additional-script-loading-error"] # ignore error of loading additional scripts.
@@ -102,9 +103,3 @@ url = "https://github.com/mahdavi-morteza"
 [[params.socialIcons]]
 name = "twitter"
 url = "https://twitter.com"
-[author]
-  name = "Morteza Mahdavi"
-  email = "mahdavi.morteza@outlook.com"
-[params.author]
-  name = "Morteza Mahdavi"
-  email = "mahdavi.morteza@outlook.com"
