--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -34,7 +34,13 @@ jobs:
         run: |
           cd Morteza-Mahdavi-Blog
           hugo --minify
+      - name: Install Pagefind
+        run: npm i -g pagefind
 
+      - name: Build search index
+        run: |
+          cd Morteza-Mahdavi-Blog
+          pagefind --site public
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
