--- a/Morteza-Mahdavi-Blog/hugo.toml
+++ b/Morteza-Mahdavi-Blog/hugo.toml
@@ -17,7 +17,7 @@ author = { name = "Morteza Mahdavi", email = "mahdavi.morteza@outlook.com" }
   tag = "tags"
 
 #Disable RSS
-disableKinds = ["RSS"]
+disableKinds = ["rss"]
 
 # Enable emojis globally
 enableEmoji = true
